--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>snippet-showcase-react</title>
+    <title>🚀 TruePulse</title>
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="snippet-showcase-react" />
+    <!-- Favicon -->
+    <link rel="icon" href="/lovable-uploads/65d0fec4-eda9-4e20-a92d-1c62f55ac397.png" type="image/png">
+
+    <meta property="og:title" content="TruePulse" />
     <meta property="og:description" content="Lovable Generated Project" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
