--- a/index.html
+++ b/index.html
@@ -3,21 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>🚀 TruePulse</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>TruePulse</title>
+    <meta name="description" content="" />
+    <meta name="author" content="" />
 
     <!-- Favicon -->
-    <link rel="icon" href="/lovable-uploads/65d0fec4-eda9-4e20-a92d-1c62f55ac397.png" type="image/png">
 
     <meta property="og:title" content="TruePulse" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:description" content="" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="" />
   </head>
 
   <body>
